--- a/css/main.css
+++ b/css/main.css
@@ -80,4 +80,14 @@ textarea:not([rows]) {
 
 :target {
   scroll-margin-block: 5ex;
+}
+
+svg {
+  width: 2rem;
+  height: 2rem;
+}
+
+img {
+  width: 4rem;
+  height: 4rem;
 }/*# sourceMappingURL=main.css.map */
