--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,13 @@
 @use 'fonts';
 @use 'reset';
 @use 'variables';
+
+svg {
+  width: 2rem;
+  height: 2rem;
+}
+
+img {
+  width: 4rem;
+  height: 4rem;
+}
