--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,8 @@
 $font-family-base: 'Inter', sans-serif;
 
+$color-black: #000000;
+$color-white: #ffffff;
+
 $color-primary: #2563eb;
 $color-secondary: #10b981;
 
@@ -8,6 +11,9 @@ $color-text-secondary: #ffffff;
 
 $color-background-body: #e0e6ee;
 
-$font-size-sidbar-header: 1.4rem;
-$font-size-sidebar-link: 1.05rem;
+$box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
+  0 2px 4px -2px rgba(16, 24, 40, 0.1);
 
+$spacing-sm: 0.5rem;
+$spacing-md: 1rem;
+$spacing-lg: 1.5rem;
