--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @use 'variables';
 @use 'site-sidebar';
 @use 'page-header';
+@use 'dashboard-grid';
 
 svg {
   width: 2rem;
@@ -18,8 +19,13 @@ body {
   height: 100vh;
   margin: 0;
   display: grid;
-  grid-template-columns: 22vh 1fr;
+  grid-template-columns: min(22vw, 18rem) 1fr;
   font-size: 16px;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;;
 }
 
 .visually-hidden {
