--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,8 @@ $font-family-base: 'Inter', sans-serif;
 
 $color-black: #000000;
 $color-white: #ffffff;
+$color-grey: #6d6d6d;
+$color-light-gray: #d0d0d0;
 
 $color-primary: #2563eb;
 $color-secondary: #10b981;
