--- a/css/main.css
+++ b/css/main.css
@@ -1,87 +1,3 @@
-@font-face {
-  font-family: "Inter";
-  src: url("Inter18pt-Bold.woff2") format("woff2"), url("Inter18pt-Bold.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("Inter18pt-SemiBold.woff2") format("woff2"), url("Inter18pt-SemiBold.woff") format("woff");
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("Inter18pt-Regular.woff2") format("woff2"), url("Inter18pt-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html {
-  -moz-text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
-}
-
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
-  margin-block-end: 0;
-}
-
-ul[role=list],
-ol[role=list] {
-  list-style: none;
-}
-
-body {
-  min-height: 100vh;
-  line-height: 1.5;
-}
-
-h1, h2, h3, h4,
-button, input, label {
-  line-height: 1.1;
-}
-
-h1, h2,
-h3, h4 {
-  text-wrap: balance;
-}
-
-a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
-  color: currentColor;
-}
-
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-
-input, button,
-textarea, select {
-  font-family: inherit;
-  font-size: inherit;
-}
-
-textarea:not([rows]) {
-  min-height: 10em;
-}
-
-:target {
-  scroll-margin-block: 5ex;
-}
-
 .site-sidebar {
   background: #2563eb;
   display: flex;
@@ -167,6 +83,10 @@ textarea:not([rows]) {
   background: #ffffff;
 }
 .page-header .user-profile__avatar:hover,
+.page-header .welcome-message__avatar:hover {
+  opacity: 0.95;
+}
+.page-header .user-profile__avatar:hover,
 .page-header .welcome-message__avatar:hover,
 .page-header .user-profile__notification-button:hover,
 .page-header .search-bar__button:hover {
@@ -244,8 +164,12 @@ textarea:not([rows]) {
   font-weight: bold;
   font-size: 0.9rem;
 }
-.header-bottom .welcome-message .welcome-message__text a {
+.header-bottom .welcome-message .welcome-message__text .welcome-message__handle {
   text-decoration: none;
+  color: #000000;
+}
+.header-bottom .welcome-message .welcome-message__text .welcome-message__handle:hover {
+  color: #6d6d6d;
 }
 .header-bottom .welcome-message .welcome-message__user {
   font-size: 1.2rem;
@@ -429,6 +353,90 @@ textarea:not([rows]) {
   color: #6d6d6d;
   font-size: 1rem;
   margin-top: -5px;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("Inter18pt-Bold.woff2") format("woff2"), url("Inter18pt-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("Inter18pt-SemiBold.woff2") format("woff2"), url("Inter18pt-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("Inter18pt-Regular.woff2") format("woff2"), url("Inter18pt-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+body, h1, h2, h3, h4, p,
+figure, blockquote, dl, dd {
+  margin-block-end: 0;
+}
+
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+}
+
+h1, h2, h3, h4,
+button, input, label {
+  line-height: 1.1;
+}
+
+h1, h2,
+h3, h4 {
+  text-wrap: balance;
+}
+
+a:not([class]) {
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+input, button,
+textarea, select {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+:target {
+  scroll-margin-block: 5ex;
 }
 
 svg {
