--- a/scss/utils/_fonts.scss
+++ b/scss/utils/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Inter';
-  src: url('Inter18pt-Bold.woff2') format('woff2'),
-    url('Inter18pt-Bold.woff') format('woff');
+  src: url('../../assets/fonts/Inter18pt-Bold.woff2') format('woff2'),
+    url('../../assets/fonts/Inter18pt-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('Inter18pt-SemiBold.woff2') format('woff2'),
-    url('Inter18pt-SemiBold.woff') format('woff');
+  src: url('../../assets/fonts/Inter18pt-SemiBold.woff2') format('woff2'),
+    url('../../assets/fonts/Inter18pt-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('Inter18pt-Regular.woff2') format('woff2'),
-    url('Inter18pt-Regular.woff') format('woff');
+  src: url('../../assets/fonts/Inter18pt-Regular.woff2') format('woff2'),
+    url('../../assets/fonts/Inter18pt-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
